<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022, WSO2 LLC. (http://www.wso2.com).
  ~
  ~ WSO2 LLC. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <groupId>org.wso2.carbon.apimgt</groupId>
        <artifactId>apk</artifactId>
        <version>9.26.10-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>org.wso2.apk.apimgt.impl</artifactId>
    <packaging>bundle</packaging>
    <name>WSO2 Carbon - API Management Implementation</name>

    <dependencies>
        <dependency>
            <groupId>org.apache.woden.wso2</groupId>
            <artifactId>woden</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.poi.wso2</groupId>
            <artifactId>poi-ooxml</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.wsdl4j</groupId>
            <artifactId>wsdl4j.wso2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.apimgt</groupId>
            <artifactId>org.wso2.apk.apimgt.api</artifactId>
            <version>9.26.10-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j</artifactId>
            <version>58.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.utils</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.registry</groupId>
            <artifactId>org.wso2.carbon.registry.indexing</artifactId>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple.wso2</groupId>
            <artifactId>json-simple</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
        </dependency>
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-models</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.io.swagger</groupId>
            <artifactId>swagger-inflector</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.io.swagger</groupId>
            <artifactId>swagger-inflector-oas3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.io.swagger</groupId>
            <artifactId>swagger-parser</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.io.swagger.v3</groupId>
            <artifactId>swagger-parser</artifactId>
        </dependency>
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-models</artifactId>
        </dependency>
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-guava</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-ext</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.org.openapitools</groupId>
            <artifactId>openapi-generator</artifactId>
        </dependency>
        <dependency>
            <groupId>xerces.wso2</groupId>
            <artifactId>xercesImpl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>org.jacoco.agent</artifactId>
            <classifier>runtime</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.felix</groupId>
            <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.graphQL</groupId>
            <artifactId>graphQL</artifactId>
            <version>${graphql.java.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.com.squareup.okio</groupId>
            <artifactId>okio</artifactId>
            <version>${okio.wso2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.com.squareup.okhttp</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.wso2.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign</groupId>
            <artifactId>feign-core</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign</groupId>
            <artifactId>feign-gson</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign</groupId>
            <artifactId>feign-okhttp</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign</groupId>
            <artifactId>feign-slf4j</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${fasterxml.jackson.core.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.org.everit.json</groupId>
            <artifactId>org.everit.json.schema</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.json</groupId>
                    <artifactId>json</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.apicurio</groupId>
            <artifactId>apicurio-data-models</artifactId>
            <version>1.1.5</version>
        </dependency>
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>${commons-validator.version}</version>
        </dependency>
        <dependency>
            <groupId>com.damnhandy.wso2</groupId>
            <artifactId>handy-uri-templates</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity-engine-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.com.amazonaws</groupId>
            <artifactId>awslambda</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.apimgt</groupId>
            <artifactId>org.wso2.apk.apimgt.user</artifactId>
            <version>9.26.10-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>1.5.2.Final</version>
        </dependency>
        <dependency>
            <groupId>org.json.wso2</groupId>
            <artifactId>json</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>*</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.14.0</version>
                <configuration>
                    <skip>${skip.aspectj}</skip>
                    <!--Uncomment the following in order to debug the aspectJ weaving-->
                    <!--<showWeaveInfo>true</showWeaveInfo>-->
                    <source>1.8</source>
                    <target>1.8</target>
                    <complianceLevel>1.8</complianceLevel>
                    <excludes>
                        <!--The following class have been excluded from aspectj weaving, to avoid build failures-->
                        <exclude>**/thrift/*Service.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED
                        --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
                    </argLine>
                    <classpathDependencyExcludes>
                        <classpathDependencyExclude>org.ops4j.pax.logging</classpathDependencyExclude>
                    </classpathDependencyExcludes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                        <Bundle-Name>${project.artifactId}</Bundle-Name>
                        <Private-Package>
                            org.wso2.apk.apimgt.impl.internal.*
                        </Private-Package>
                        <Export-Package>
                            !org.apache.commons.codec.*,
                            org.wso2.apk.apimgt.impl.*;version="${carbon.apimgt.version}",
                            !org.apache.commons.collections4.*,
                        </Export-Package>
                        <Import-Package>
                            org.wso2.apk.apimgt.api.*;version="${carbon.apimgt.imp.pkg.version}",
                            !org.wso2.apk.apimgt.api.model.xsd.*,
                            javax.servlet;version="${javax.servlet.imp.pkg.version}",
                            javax.servlet.http;version="${javax.servlet.imp.pkg.version}",
                            javax.servlet.resources;version="${javax.servlet.imp.pkg.version}",
                            com.google.gson,
                            org.apache.commons.*,
                            org.apache.http.*,
                            org.wso2.carbon.registry.core.*; version="${carbon.registry.imp.pkg.version}",
                            org.apache.pdfbox.*; version="${pdfbox.version}",
                            javax.cache,
                            javax.naming,
                            javax.sql,
                            javax.wsdl.*,
                            javax.xml.*;version="0.0.0",
                            org.json.simple.*,
                            org.json.*;version="${org.json.version.range}",
                            org.slf4j,
                            org.slf4j.ext,
                            org.w3c.dom,
                            com.ibm.wsdl.*; version="${wsdl4j.version.range}";resolution:=optional,
                            net.sf.saxon.*,
                            io.swagger.v3.core.*,
                            io.swagger.v3.oas.models.*,
                            io.swagger.v3.parser,
                            io.swagger.v3.parser.converter,
                            com.fasterxml.jackson.datatype.guava,
                            com.github.benmanes.caffeine.cache;version="${caffeine.version}",
                            org.openapitools.codegen.*,
                            org.wso2.carbon.utils.*; version="${carbon.platform.package.import.version.range}",
                            org.xml.sax,
                            okio.*;version="${okio.wso2.version}",
                            okhttp3.*;version="${okhttp.wso2.version}"
                            *;resolution:=optional
                        </Import-Package>
                        <DynamicImport-Package>*</DynamicImport-Package>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
